<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Moka</string>

    <!-- Tabs -->
    <string name="tab_title_create">Créer</string>
    <string name="tab_title_current">En cours</string>
    <string name="tab_title_edit">Éditer</string>
    <string name="tab_title_history">Historique</string>

    <!-- MenuItems -->
    <string name="search">Rechercher</string>
    <string name="delete">Supprimer</string>
    <string name="validate">Valider</string>
    <string name="licenses">Licences open source</string>
    <string name="about">À propos</string>
    <string name="settings">Paramètres</string>
    <string name="logout">Se déconnecter</string>
    <string name="tutorial">Tutoriel</string>

    <!-- About dialog -->
    <string name="about_moka">À propos de Moka</string>
    <string name="moka_website">http://themokaproject.github.io/</string>
    <string name="credits"><![CDATA[<p>
            Credits go to Thomas Barthélémy <a href="https://github.com/tbarthel-fr">https://github.com/tbarthel-fr</a>,
            Vincent Barthélémy <a href="https://github.com/vbarthel-fr">https://github.com/vbarthel-fr</a>,
            Thomas Keunebroek <a href="https://github.com/tkeunebr">https://github.com/tkeunebr</a>
            and Alexandre Masciulli <a href="https://github.com/amasciul">https://github.com/amasciul</a>.
          </p>]]>
    </string>

    <string name="search_hint">Rechercher un élément</string>

    <!-- Empty views -->
    <string name="type_list_empty_text">Aucune catégorie ne correspond à votre saisie</string>
    <string name="current_item_list_empty_text">Vous n\'avez pas encore ajouté d\'éléments</string>
    <string name="history_entry_list_empty_text">Aucun historique n\'est associé à cet élément</string>

    <string name="delete_confirmation_title">Confirmation</string>
    <string name="delete_confirmation_message">Êtes-vous sûr(e) de vouloir supprimer %1$s ?</string>
    <string name="delete_confirmation_ok">OK</string>
    <string name="delete_confirmation_cancel">Annuler</string>

    <!-- TypeListFragment -->
    <string name="type_image_content_description">Description du type</string>

    <!-- CurrentItemListFragment -->
    <string name="current_item_date_format">Créé le %1$s</string>

    <!-- HistoryListFragment -->
    <string name="history_entry_date_format">Le %1$s</string>

    <!-- Type titles -->
    <string name="image_type_title">Image</string>
    <string name="video_type_title">Vidéo</string>
    <string name="web_page_type_title">Page web</string>
    <string name="plain_text_type_title">Texte</string>
    <string name="list_type_title">Liste</string>
    <string name="post_it_type_title">Post-it</string>
    <string name="uml_type_title">Diagramme UML</string>
    <!-- Type descriptions -->
    <string name="image_type_description"><![CDATA[Une <b>image</b> est une représentation visuelle d\'un objet.<br><br>
        Après avoir rajouté une image, vous pourrez :<br><br>
        <ul>
            <li>Modifier son titre,</li>
            <li>Modifier l\'image source,</li>
            <li>La déplacer, l\'agrandir et la faire tourner.</li>
        </ul>]]>
    </string>
    <string name="video_type_description"><![CDATA[Une <b>vidéo</b> permet d\'afficher tout type de contenu vidéo, par
        exemple un lien YouTube.<br><br>
        Après avoir rajouté une vidéo, vous pourrez :<br><br>
        <ul>
            <li>Modifier son titre,</li>
            <li>Modifier le lien source,</li>
            <li>La déplacer, l\'agrandir et la faire tourner,</li>
            <li>La forcer à être jouée automatiquement.</li>
        </ul>]]>
    </string>
    <string name="web_page_type_description"><![CDATA[Une <b>page web</b> permet d\'afficher n\'importe quel élément web
        à la manière d\'un navigateur.<br><br>
        Après avoir rajouté une page web, vous pourrez :<br><br>
        <ul>
            <li>Modifier son titre,</li>
            <li>Choisir si elle est affichée automatiquement ou sous forme de lien,</li>
            <li>Modifier le lien source,</li>
            <li>La déplacer, l\'agrandir et la faire tourner.</li>
        </ul>]]>
    </string>
    <string name="plain_text_type_description"><![CDATA[Un élément <b>texte</b> permet d\'afficher du texte, généralement
        de longueur assez faible, par exemple un mémo ou encore un titre.<br><br>
        Après avoir rajouté un élément texte, vous pourrez :<br><br>
        <ul>
            <li>Modifier son contenu,</li>
            <li>Le déplacer, l\'agrandir et le faire tourner.</li>
        </ul>]]>
    </string>
    <string name="list_type_description"><![CDATA[Une <b>liste</b> permet d\'afficher une suite d\'éléments placés
        les uns à la suite des autres de manière ordonnée.<br><br>
        Après avoir rajouté une liste, vous pourrez :<br><br>
        <ul>
            <li>Ajouter, modifier ou supprimer un élément,</li>
            <li>La déplacer, l\'agrandir et la faire tourner.</li>
        </ul>]]>
    </string>
    <string name="post_it_type_description"><![CDATA[Un <b>post-it</b> permet d\'afficher de manière visuelle un mémo.
        Un post-it est consitué d\'un titre et de texte destiné à épingler une information ou une question.<br><br>
        Après avoir rajouté un post-it, vous pourrez :<br><br>
        <ul>
            <li>Modifier son titre,</li>
            <li>Modifier son contenu,</li>
            <li>Changer sa couleur,</li>
            <li>Le déplacer, l\'agrandir et le faire tourner.</li>
        </ul>]]>
    </string>
    <string name="uml_type_description"><![CDATA[Un élément de type <b>UML</b> permet de construire et d\'afficher un
        diagramme UML.<br><br>
        Après avoir rajouté un élément de type UML, vous pourrez :<br><br>
        <ul>
            <li>Modifier son titre,</li>
            <li>Modifier son contenu,</li>
            <li>Ajouter des liens,</li>
            <li>Le déplacer, l\'agrandir et le faire tourner.</li>
        </ul>]]>
    </string>

    <!-- Spinner content -->
    <string name="type_category_text">Texte</string>
    <string name="type_category_media">Média</string>
    <string name="type_category_computer">Informatique</string>
    <string name="type_category_all">Afficher tout</string>
    <string-array name="item_classes">
        <item>@string/type_category_text</item>
        <item>@string/type_category_media</item>
        <item>@string/type_category_computer</item>
        <item>@string/type_category_all</item>
    </string-array>

    <!-- Start Activity -->
    <string name="info_nfc_text">Touchez un tag NFC Moka</string>
    <string name="info_no_nfc_text">NFC non disponible. Veuillez vérifier vos paramètres.</string>
    <string name="start_button_manual">Connexion</string>
    <string name="logo_description">Logo de l\'application</string>

    <!-- NewItemActivity -->
    <string name="new_item_actionbar_title">Nouvel élément</string>
    <string name="new_item_ready_for_editing">%1$s est prêt pour l\'édition</string>
    <!-- EditItemActivity -->
    <string name="lock_error_retry_btn_title">Réessayer</string>

    <!-- EditItemFragment -->
    <string name="item_info_creation">Créé par %1$s le %2$s</string>
    <!-- Item Data -->
    <string name="item_info_title">Titre</string>
    <string name="item_info_content">Contenu</string>
    <string name="item_info_url">URL</string>

    <!-- Configuration Preferences -->
    <string name="category_wireless">Wifi</string>
    <string name="category_jade">Jade</string>
    <string name="category_user">User</string>
    <string name="preference_ip_title">Adresse IP</string>
    <string name="preference_ip_summary">IP de la machine exécutant le mainContainer JADE</string>
    <string name="preference_ip_dialog_title">Adresse IP</string>
    <string name="preference_ip_default">192.168.1.50</string>
    <string name="preference_port_title">Port</string>
    <string name="preference_port_summary">Port sur lequel tourne le mainContainer JADE</string>
    <string name="preference_port_dialog_title">Port de JADE</string>
    <string name="preference_port_default">1099</string>
    <string name="preference_ssid_title">SSID</string>
    <string name="preference_ssid_summary">Identifiant du réseau WiFi</string>
    <string name="preference_ssid_dialog_title">SSID</string>
    <string name="preference_pwd_title">Password</string>
    <string name="preference_pwd_summary">Mot de passe du réseau WiFi</string>
    <string name="preference_pwd_dialog_title">Password WiFi</string>
    <string name="preference_first_name_title">Prénom</string>
    <string name="preference_first_name_summary">Prénom de l\'utilisateur</string>
    <string name="preference_first_dialog_title">Entrez votre prénom</string>
    <string name="preference_last_name_title">Nom</string>
    <string name="preference_last_name_summary">Nom de l\'utilisateur</string>
    <string name="preference_last_dialog_title">Entrez votre nom</string>

    <!-- Manual Configuration Activity -->
    <string name="button_write">Écrire TAG</string>
    <string name="touch_a_tag">Touch a tag</string>

    <!-- Device Configuration Activity -->
    <string name="connexion">Connexion au réseau</string>
    <string name="optenir">Récupération d\' une adresse IP</string>
    <string name="container">Connexion au mainContainer JADE</string>
    <string name="agent">Lancement de l\'agent android JADE</string>
    <string name="name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="unknown_lastname">Inconnu</string>
    <string name="unknown_firstname">Inconnu</string>

    <!-- Croutons toast -->
    <string name="no_ssid">SSID non renseigné, vérifier les paramètres.</string>
    <string name="no_pwd">Password wifi non renseigné, vérifier les paramètres.</string>
    <string name="change_success_first_name">Prénom enregistré.</string>
    <string name="change_success_last_name">Nom enregistré.</string>
    <string name="change_success_ssid">SSID enregistré.</string>
    <string name="change_success_pwd">Password wifi enregistré.</string>
    <string name="change_success_ip">JADE IP enregistrée.</string>
    <string name="change_error_ip">Addresse ip non valide.</string>
    <string name="change_success_port">JADE port enregistré.</string>
    <string name="network_error">Serveur déconnecté ou réseau indisponible</string>
    <string name="item_deletion_success">L\'élément a été correctement supprimé</string>
    <string name="item_not_supported_yet">Ce type d\'élément n\'est pas encore pris en charge</string>

    <!-- Progress messages -->
    <string name="progress_dialog_upload_image_title">Chargement en cours</string>
    <string name="progress_dialog_upload_image_message">Redimensionnement et upload de l\'image en cours&#8230;</string>

    <!-- Welcome Activity -->
    <string name="welcome">Bienvenue sur Moka</string>
    <string name="welcome_instruction">Entrez votre nom et votre prénom.</string>
    <string name="welcome_tuto">Lancer un tutoriel</string>
    <string name="welcome_moka">Accéder à Moka</string>

    <!-- Main Activity -->
    <string name="logout_confirmation_title">Confirmation</string>
    <string name="logout_confirmation_message">Êtes-vous sûr(e) de vouloir vous déconnecter ?</string>
    <string name="logout_confirmation_ok">OK</string>
    <string name="logout_confirmation_cancel">Annuler</string>

    <!-- Crouton -->
    <string name="crouton_lock_success">Element locké pour vous !</string>
    <string name="crouton_lock_failed_format">Element déjà locké par %1$s</string>
    <string name="crouton_lock_error">Locking error</string>

</resources>

