<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_licenses"
        android:icon="@drawable/ic_menu_info_details"
        android:showAsAction="never"
        android:orderInCategory="9998"
        android:title="@string/licenses" />
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_menu_info_details"
        android:showAsAction="never"
        android:orderInCategory="9999"
        android:title="@string/about" />
    <item
        android:id="@+id/menu_tuto"
        android:icon="@drawable/ic_menu_info_details"
        android:showAsAction="never"
        android:orderInCategory="9999"
        android:title="@string/tutorial" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_menu_info_details"
        android:showAsAction="never"
        android:orderInCategory="9999"
        android:title="@string/logout" />
</menu>